updated store url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ mraid.open(url);
 
 // Detect platform from user agent
 var userAgent = navigator.userAgent || navigator.vendor;
-var url = 'https://apps.apple.com/jp/app/%E5%90%9B%E3%81%AE%E7%9B%AE%E7%9A%84%E3%81%AF%E3%83%9C%E3%82%AF%E3%82%92%E6%AE%BA%E3%81%99%E3%81%93%E3%81%A8%EF%BC%93/id1176070496';
+var url = 'https://apps.apple.com/jp/app/id1176070496';
 var android = 'https://play.google.com/store/apps/details?id=com.fundoshiparade.bokukoro3jp&hl=ja';
 if (/android/i.test(userAgent)) {
  url = android;
